--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "flow-bin": "^0.48.0",
     "node-sass-chokidar": "0.0.3",
     "react-scripts": "1.0.7"
   },
@@ -14,6 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "flow": "flow",
     "eject": "react-scripts eject",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive"
