--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mongodb": "^2.2.28"
   },
   "scripts": {
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
+    "dev": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "flow": "flow",
